feat: improve draft order management
